tests/baselines/reference/subtypingWithNumericIndexer.errors.txt
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithNumericIndexer.ts(32,11): error TS2415: Class 'B3<T>' incorrectly extends base class 'A<T>'.
  Index signatures are incompatible.
    Type 'Derived' is not assignable to type 'T'.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithNumericIndexer.ts(36,11): error TS2415: Class 'B4<T>' incorrectly extends base class 'A<T>'.
  Index signatures are incompatible.
    Type 'Derived2' is not assignable to type 'T'.


==== tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithNumericIndexer.ts (2 errors) ====
    // Derived type indexer must be subtype of base type indexer
    
    interface Base { foo: string; }
    interface Derived extends Base { bar: string; }
    interface Derived2 extends Derived { baz: string; }
    
    class A {
        [x: number]: Base;
    }
    
    class B extends A {
        [x: number]: Derived; // ok
    }
    
    class B2 extends A {
        [x: number]: Derived2; // ok
    }
    
    module Generics {
        class A<T extends Base> {
            [x: number]: T;
        }
    
        class B extends A<Base> {
            [x: number]: Derived; // ok
        }
    
        class B2 extends A<Base> {
            [x: number]: Derived2; // ok
        }
    
        class B3<T extends Base> extends A<T> {
              ~~
!!! error TS2415: Class 'B3<T>' incorrectly extends base class 'A<T>'.
!!! error TS2415:   Index signatures are incompatible.
!!! error TS2415:     Type 'Derived' is not assignable to type 'T'.
            [x: number]: Derived; // error, BUG?
        }
    
        class B4<T extends Base> extends A<T> {
              ~~
!!! error TS2415: Class 'B4<T>' incorrectly extends base class 'A<T>'.
!!! error TS2415:   Index signatures are incompatible.
!!! error TS2415:     Type 'Derived2' is not assignable to type 'T'.
            [x: number]: Derived2; // error, BUG?
        }
    }